k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pielarmonia-service
  namespace: pielarmonia
spec:
  selector:
    app: pielarmonia-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
